<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include layout="@layout/layout_appbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:animateLayoutChanges="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_to"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintBottom_toTopOf="@+id/inputAddress"
                app:layout_constraintStart_toStartOf="@+id/inputAddress"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/hint_address_ens"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_amount"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintBottom_toTopOf="@+id/inputAmount"
                app:layout_constraintStart_toStartOf="@+id/inputAmount"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_space_label"
                android:hint="@string/hint_amount"
                app:layout_constraintTop_toBottomOf="@+id/inputAddress"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_message"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintBottom_toTopOf="@+id/inputMessage"
                app:layout_constraintStart_toStartOf="@+id/inputMessage"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_space_label"
                android:hint="@string/hint_message"
                app:layout_constraintTop_toBottomOf="@+id/inputAmount"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/action_send"
                app:layout_constraintTop_toBottomOf="@+id/inputMessage"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_qrcode_black_24dp"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/layout_loading" />

</FrameLayout>