<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/layout_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBurn"
                style="?attr/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/action_burn"
                app:icon="@drawable/ic_fire_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPair"
                style="?attr/buttonOutline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/action_pair"
                app:icon="@drawable/ic_sync_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonBurn"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShow"
                style="?attr/buttonOutline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/action_show_pk"
                app:icon="@drawable/ic_vpn_key_black_24dp"
                app:iconGravity="textStart"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/buttonCopy"
                app:layout_constraintTop_toBottomOf="@+id/buttonPair"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCopy"
                style="?attr/buttonOutline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/action_copy_pk"
                app:icon="@drawable/ic_vpn_key_black_24dp"
                app:iconGravity="textStart"
                app:layout_constraintLeft_toRightOf="@+id/buttonShow"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPair"
                />

            <ImageView
                android:id="@+id/imageQrPrivate"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:padding="8dp"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonShow"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_private_key"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintBottom_toTopOf="@+id/inputPrivate"
                app:layout_constraintStart_toStartOf="@+id/inputPrivate"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPrivate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_space_label"
                android:hint="@string/hint_address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageQrPrivate"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreatePrivate"
                style="?attr/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/action_create"
                android:visibility="gone"
                app:icon="@drawable/ic_add_box_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPrivate"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputSeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_space"
                android:hint="@string/hint_seed"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonCreatePrivate"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreateSeed"
                style="?attr/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/action_create"
                android:visibility="gone"
                app:icon="@drawable/ic_add_box_black_24dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputSeed"
                />

            <Space
                android:id="@+id/_space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/textVersion"
                app:layout_constraintTop_toBottomOf="@+id/buttonCreateSeed"
                />

            <TextView
                android:id="@+id/textVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceOverline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_space"
                tools:text="v1123"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBeer"
                style="@style/ButtonSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_beer"
                android:textAppearance="?attr/textAppearanceOverline"
                app:icon="@drawable/ic_beer_black_24dp"
                app:iconSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/_space"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>